Bug 1150310 - Only check stencil LSB 8bit value. r=jgilbert